# What2eat

./: .gitignore  README.md
restaurant-app/: package-lock.json  package.json  requirements.txt
restaurant-app/server/: index.js
restaurant-app/src/: App.jsx  index.css  main.jsx
restaurant-app/src/components/: HourglassSpinner.jsx  Map.jsx  NearbySearch.jsx  RestaurantSearch.jsx
restaurant-app/src/utils/: fetchRestaurants.js
results/: filtered_result.json  final_result.json
scraper/: app.py  gemini_test.py  pyproject.toml  requirements.txt  reviews_渣男 TaiwanBistro 木柵二渣_status.json  scrape_google_reviews.py
scraper/lora_qa_model_new/lora_qa_model_new/: README.md  adapter_config.json
scraper/reviews/: Juicy Bun Burger 就是棒 美式餐廳 政大店_analysis.json  Juicy Bun Burger 就是棒 美食餐廳 政大店.json  Juicy Bun Burger 就是棒 美食餐廳 政大店_analysis.json  Juicy bun 政大_analysis.json  Juicybun.json  Juicybun_analysis.json  渣男 TaiwanBistro 木柵二渣.json  渣男 TaiwanBistro 木柵二渣_analysis.json
