[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
peft = "^0.14.0"
openai = "^1.58.1"
selenium = "^4.27.1"
flask-cors = "^5.0.0"
google-auth = "^2.37.0"
flask = "^3.1.0"
google-cloud-firestore = "^2.19.0"
webdriver-manager = "^4.0.2"


[tool.poetry.group.dev.dependencies]
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
